<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#3D2B1F">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/regularImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/news_image" />
        <TextView
            android:id="@+id/regular_headlineTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regularImageView"
            android:textColor="@color/yellow"
            android:textSize="18dp"
            android:textStyle="bold"
            android:padding="3dp"
            android:maxLines="2"
            android:layout_margin="2dp"
            android:text="@string/news_headline" />

        <TextView
            android:id="@+id/regular_SubHeadingTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regular_headlineTV"
            android:text="@string/news_subheadline"
            android:textColor="@color/white"
            android:maxLines="3"
            android:layout_margin="3dp"
            android:padding="3dp"
            />


    </RelativeLayout>
</androidx.cardview.widget.CardView>